--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 html,
 body {
-  margin: 0;
-  max-width: 1600px;
+ 
+  scroll-behavior: smooth;
 
 }
-
 
 .container {
   max-width: 1250px;
   margin: 0 auto;
+  margin-bottom: ;
+ 
 }
 header {
   background: url(img/bg-header.png) no-repeat;
@@ -19,21 +20,29 @@ header {
 
 /* меню */
 .navbar {
-  left:0;
-  display: flex;
+overflow: hidden;
+display: flex;
 width: 100%;
 height: 100px;
-position: fixed;
-top: 0;
 background: url(img/bg-header.png) no-repeat;
-overflow: hidden;
 }
 
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
 .navbar-logo {
   margin-left: 173px;
   padding: 5px;
 }
 
+.navbar-logo:hover {
+  transform: scale(0.8);
+}
 .top-menu {
   margin-left: 217px;
 }
@@ -47,6 +56,15 @@ overflow: hidden;
  font-family: 'Gentium Book Basic', serif;
  font-weight:700px;
  font-size: 21px;
+ margin-bottom: 10px;
+}
+
+.menu-main li:hover {
+ border-top: #fefefe 2px solid;
+ font-weight: bold;
+ transform: scale(0.8);
+
+
 }
 a {
   text-decoration: none;
@@ -62,7 +80,7 @@ h1 {
   text-align: center;
   text-shadow: 0px 1px 2px rgba(1, 1, 1, 0.64);
   font-weight: 800;
-  padding:116px 140px 38px 140px;
+  padding:120px 140px 38px 140px;
 }
 
 h2 {
@@ -104,19 +122,44 @@ h2 {
 
 .about {
   background: url(img/bg-about.png) no-repeat;
-  padding: 100px 92px 0 110px;
+  background-size: cover;
+  padding: 100px 92px 0px 110px;
   text-align: center;
-
+  width: 100%;
 }
+
+
 
 .about-wrapper {
   display: flex;
 }
 
+.about-col {
+  padding-top:100px;
+}
+
 .ingredients {
   background: url(img/bg-ingredients.png) no-repeat;
-  padding: 167px 175px 342px 857px;
+ background-size: cover;
+ padding-top:100px;
+ padding-bottom:100px;
+margin-bottom: -10px;
+}
 
+.ingredients-wrapper{
+  background-color: rgb(0, 0, 0);
+  opacity: 0.671;
+  margin:100px 40px 101px 640px;
+  padding:78px 70px 72px 70px;
+
+}
+
+.ingredient-image {
+margin-top:;
+margin:53px 0 0 0;
+}
+.ingredient-image img {
+  margin-right:29px;
 }
 
 .menu-list {
@@ -174,10 +217,7 @@ td {
   display: flex;
 }
 
-.wrapper-form {
-  
- 
-}
+
 
 .decoration {
   margin: 0 auto;
@@ -207,10 +247,12 @@ td {
   background-color: rgba(255, 255, 255, 0.278);
   opacity: 0.702;
   padding: 10px;
+  margin-right: 30px;
 }
 
 .btn-white:hover {
   background-color: #282019;
+
 }
 
 .btn-reservations {
@@ -247,6 +289,14 @@ footer {
 
 }
 
-main {
-  top: 100px;
+/* якоря */
+.about,
+.ingredients,
+.menu-list,
+.reviews,
+.reservations {
+padding-top: 100px;
+margin-top: -100px;
+-webkit-background-clip: content-box;
+background-clip: content-box;
 }
