--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 
 header {
   background: url(img/bg-header.png) no-repeat;
-  height: 750px;
-
+  background-size: cover;
+width: 100%;
 }
 
 
@@ -26,6 +26,7 @@ header {
   width: 100%;
   height: 100px;
   background: url(img/bg-header.png) no-repeat;
+  background-size: cover;
 }
 
 
@@ -175,11 +176,28 @@ h2 {
   -ms-transform: rotate(360deg);
   -o-transform: rotate(360deg);
   transform: rotate(360deg);
+  -moz-animation-name: plate-img;
+  -moz-animation-duration: 77s;
+  -webkit-animation-name: plate-img;
+  -webkit-animation-duration: 77s;
 
+  -moz-animation-timing-function: linear;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-direction: normal;
+  -moz-animation-delay: 0;
+  -moz-animation-play-state: running;
+  -moz-animation-fill-mode: forwards;
+
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: normal;
+  -webkit-animation-delay: 0;
+  -webkit-animation-play-state: running;
+  -webkit-animation-fill-mode: forwards;
 
 }
 
-@keyframes plate-img {
+@-webkit-keyframes plate-img {
   0% {
     -moz-transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
@@ -209,6 +227,12 @@ h2 {
   padding-top: 100px;
   padding-bottom: 100px;
   margin-bottom: -10px;
+  
+}
+
+.ingredients .container {
+display: flex;
+flex-direction: row;
 }
 
 .ingredients p {
@@ -217,14 +241,17 @@ h2 {
   color: rgb(255, 255, 255);
   line-height: 1.5;
   text-align: center;
+  align-content: space-between;
+ 
 }
 
 .ingredients-wrapper {
   background-color: rgb(0, 0, 0);
   opacity: 0.671;
-  margin: 100px 40px 101px 640px;
+  margin: 100px 40px 101px 0px;
   padding: 50px 70px 72px 70px;
 position: relative;
+
 }
 
 .ingredient-image {
@@ -237,7 +264,10 @@ position: relative;
   
 }
 
-
+.video {
+  margin-top: 150px;
+  margin-right: 20px;
+}
 .popup-text-ingredients {
  position: absolute;
 top:336px;
@@ -319,19 +349,30 @@ padding-top:33px;
 
 
 .wrapper-form {
-  display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
   padding-top:44px;
   padding-left: 0;
+  width: 100%;
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: center;
+ 
 }
 
 input {
-  margin-top: 10px;
-  width: 40%;
- ;
+  width: 200px;
+  margin-right: 30px;
+  margin-left:0;
+  margin-top:9.5px;
+ 
+}
+
+input::placeholder {
+  width: 200px;
+  margin-left: 0;
+  
 }
 label {
+
 padding-top: 3px;
 }
 .decoration {
@@ -346,6 +387,7 @@ padding-top: 3px;
 /* кнопки */
 .btn-header {
   text-align: center;
+  padding-bottom:142px;
 }
 
 .btn-white {
