--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@ body {
   max-width: 1250px;
   margin: 0 auto;
 
-
+ 
 }
 
 header {
-  background: url(img/bg-header.png) no-repeat;
-  background-size: cover;
-width: 100%;
+background: url(img/bg-header.png) no-repeat;
+background-size: cover;
+max-width: 100%;
+height: auto;
+display: block;
 }
 
 
@@ -23,7 +25,7 @@ width: 100%;
 .navbar {
   overflow: hidden;
   display: flex;
-  width: 100%;
+  max-width: 100%;
   height: 100px;
   background: url(img/bg-header.png) no-repeat;
   background-size: cover;
@@ -56,7 +58,6 @@ width: 100%;
   background-size: cover;
   padding: 100px 110px 100px 110px;
   width: 100%;
-
 }
 
 .menu-list {
@@ -209,7 +210,7 @@ h2 {
   }
 }
 
-@-moz-keyframes earth {
+@-moz-keyframes plate-img {
   0% {
     -moz-transform: rotate(0deg);
     -webkit-transform: rotate(0deg);
@@ -227,12 +228,15 @@ h2 {
   padding-top: 100px;
   padding-bottom: 100px;
   margin-bottom: -10px;
-  
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 .ingredients .container {
 display: flex;
 flex-direction: row;
+
 }
 
 .ingredients p {
@@ -305,7 +309,10 @@ td {
 .reviews {
   background: url(img/reviews-bg.png) no-repeat;
   padding: 100px 240px 100px 240px;
-
+  background-size: cover;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 .reviews p {
@@ -327,35 +334,51 @@ padding-top:33px;
 
 .reviews-wrapper {
   background-color: rgb(0, 0, 0);
-  padding: 74.89px 70px 96.96px 35px;
   opacity: 0.671;
+  
+
 }
 
 .reservations {
   background: url(img/background-reservations.png) no-repeat;
   background-size: cover;
-  padding: 95px 110px 103px 39px;
+ max-width: 100%;
+display: flex;
+flex-direction: row;
+padding:99.69px 283px 103px 40px;
+}
 
+.booking {
+  width: 430px;
+  
 }
 
 .reservations-wrapper {
   display: flex;
   flex-direction: row;
+ 
 }
 
 .reservations-wrapper h2 {
   padding-top:0;
 }
 
+.booking {
+  margin-left: 70px;
+  width: 430px;
 
+}
 .wrapper-form {
-  padding-top:44px;
+  margin-top: 34,49px;
   padding-left: 0;
   width: 100%;
-  display: inline-flex;
-  flex-wrap: wrap;
-  align-items: center;
+
  
+}
+
+.form-col  {
+  display: flex;
+  flex-direction: row;
 }
 
 input {
@@ -363,17 +386,27 @@ input {
   margin-right: 30px;
   margin-left:0;
   margin-top:9.5px;
- 
+ display: block;
+ margin-bottom: 27px;
 }
 
 input::placeholder {
   width: 200px;
-  margin-left: 0;
-  
-}
-label {
 
+}
+
+input::placeholder:hover{
+  border-color: rgb(201, 161, 49);
+}
+
+label {
 padding-top: 3px;
+display: block;
+font-size: 14px;
+font-family: "OpenSans";
+color: rgb(201, 161, 49);
+font-weight: bold;
+line-height: 1.2;
 }
 .decoration {
   margin: 0 auto;
@@ -418,8 +451,14 @@ padding-top: 3px;
   border-style: solid;
   background-color: rgba(200, 159, 45, 0.98);
   color: white;
+  width: 198px;
+  height: 34px;
+  margin-left:114.88px;
 }
-
+.reservations-images {
+  margin-left: 40px;
+  margin-right: 30px;
+}
 /* иконки */
 .social {
   display: flex;
@@ -430,9 +469,7 @@ padding-top: 3px;
   margin-right: 25px;
 }
 
-.booking {
-  margin-left: 100px;
-}
+
 
 #name,
 #date {
@@ -443,7 +480,62 @@ padding-top: 3px;
 footer {
   background-color: #191919;
   color: #fefefe;
+padding:52px 110px 50px 40px;
 
+}
+
+.footer-wrapper {
+display: flex;
+align-content: space-between;
+width: 100%;
+}
+
+footer h3 {
+  font-size: 21px;
+  font-family: "YesevaOne";
+  color: rgb(254, 254, 254);
+  line-height: 1.143;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+
+.footer-social {
+margin-top:47.5px;
+display: flex;
+align-content:row;
+margin-left:76.44px;
+}
+
+footer p {
+  font-size: 16px;
+  font-family: "OpenSans";
+  color: rgb(255, 255, 255);
+  line-height: 1.5;
+  text-align: center;
+}
+footer .icon-white-line {
+ margin: 0 auto;
+  margin-top: 16px;
+  margin-bottom:13.5px;
+}
+.footer-about-us {
+  width: 35,2%;
+  padding: 0px 30px 0px 40px;
+}
+footer span {
+  font-weight: bold;
+}
+.time-work {
+  width: 29,6%;
+  padding: 0px 70px 0px 70px;
+  
+}
+
+.our-location {
+  width: 35,2%;
+  padding: 0px 110px 0px 100px;
 }
 
 
