--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,
 body {
 
-  scroll-behavior: smooth;
+scroll-behavior: smooth;
 
 }
 
@@ -25,20 +25,23 @@ display: block;
 .navbar {
   overflow: hidden;
   display: flex;
-  max-width: 100%;
+  width: 100%;
   height: 100px;
   background: url(img/bg-header.png) no-repeat;
   background-size: cover;
+
+
 }
 
 
 
 .sticky {
-  position: fixed;
+position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
-}
+ 
+} 
 
 .navbar-logo {
   margin-left: 173px;
@@ -112,7 +115,7 @@ h1 {
   text-align: center;
   text-shadow: 0px 1px 2px rgba(1, 1, 1, 0.64);
   font-weight: 800;
-  padding: 120px 140px 38px 140px;
+  padding: 140px 140px 38px 140px;
 }
 
 h1:hover {
@@ -162,7 +165,7 @@ h2 {
 .about {
   background: url(img/bg-about.png) no-repeat;
   background-size: cover;
-  padding: 100px 92px 0px 110px;
+  padding: 0px 92px 0px 110px;
   text-align: center;
   width: 100%;
 }
@@ -174,7 +177,7 @@ h2 {
 }
 
 .about-col {
-  padding-top: 100px;
+  margin-top: 100px;
 }
 
 .plate-img {
@@ -187,7 +190,7 @@ animation-direction: normal;
 animation-delay: 0;
 animation-play-state: running;
 animation-fill-mode: forwards;
-
+margin-top: 100px;
 }
 
 @keyframes plate-img {
@@ -317,7 +320,7 @@ padding-top:33px;
 .reviews-wrapper {
   background-color: rgb(0, 0, 0);
   opacity: 0.671;
-  
+  padding: 78px 78px 98px 70px;
 
 }
 
@@ -327,9 +330,11 @@ padding-top:33px;
  max-width: 100%;
 display: flex;
 flex-direction: row;
-padding:99.69px 283px 103px 40px;
+padding:110px 283px 103px 40px;
 }
-
+.reservations h2 {
+  padding-top: 20px;
+}
 .booking {
   width: 430px;
   
@@ -522,13 +527,9 @@ footer span {
 
 
 
-/* .about,
-.menu,
-.ingredients,
-.reviews,
-.reservations {
+.anchor {
 padding-top: 100px;
 margin-top: -100px;
 -webkit-background-clip: content-box;
 background-clip: content-box;
-} */
+}
