--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
 html,
 body {
-
+font-size: 16px;
 scroll-behavior: smooth;
-
+width: 100%;
 }
 
 .container {
-  max-width: 1250px;
-  margin: 0 auto;
-
+width: 1250px;
+margin: 0 auto;
+width: 78vw;
  
 }
 
 header {
-background: url(img/bg-header.png) no-repeat;
+background: url(img/bg-header.png);
+background-repeat: no-repeat;
 background-size: cover;
-max-width: 100%;
-height: auto;
-display: block;
+background-position: center center;
+background-attachment: fixed;
+width: 100%;
 }
 
 
@@ -25,50 +26,59 @@ display: block;
 .navbar {
   overflow: hidden;
   display: flex;
-  width: 100%;
-  height: 100px;
-  background: url(img/bg-header.png) no-repeat;
-  background-size: cover;
-
-
+  justify-content: space-between;
+ 
 }
 
 
 
-.sticky {
+
+
+.sticky{
 position: fixed;
   top: 0;
-  width: 100%;
   z-index: 1000;
- 
+ height: 100px;
+ background: url(img/bg-header.png);
+ background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+background-attachment: fixed;
+ width: 100vw;
 } 
 
-.navbar-logo {
-  margin-left: 173px;
+
+.header-img {
+  margin-left: 80px;
   padding: 5px;
+  margin-right: 10px;
 }
 
-.navbar-logo:hover {
+.header-img:hover {
   transform: scale(0.8);
 }
 
-.top-menu {
-  margin-left: 217px;
+.nav-bar{
+  margin: 0 auto;
+  padding-top: 50px;
 }
 
 .menu {
   background: url(img/menu-Background.png);
+  background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px 110px 100px 110px;
+  background-position: center center;
+  background-attachment: fixed;
+  padding: 100px 20px 100px 20px;
   width: 100%;
 }
 
 .menu-list {
   display: flex;
-  align-items: flex-start;
+justify-content: space-around;
   flex-wrap: wrap;
-  padding-left: 288px;
-  padding-right: 281px;
+  margin: 0 auto;
+ 
 
 }
 
@@ -85,20 +95,77 @@ position: fixed;
   list-style: none;
 }
 
-.menu-main li {
-  padding: 45px 23px 45px 23px;
+.nav-link {
+  padding: 45px 10px 45px 10px;
   font-family: 'Gentium Book Basic', serif;
   font-weight: 700px;
   font-size: 21px;
   margin-bottom: 10px;
+ 
 }
 
-.menu-main li:hover {
+.nav-link:hover {
   border-top: #fefefe 2px solid;
   font-weight: bold;
   transform: scale(0.8);
 
 
+}
+
+/* меню бургер */
+#menuToggle {
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  
+}
+
+#menuToggle input {
+  display: flex;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0; /* hide input */
+  z-index: 1; /* top of the menu */
+}
+
+#menuToggle span{
+  width: 55px;
+  height: 8px;
+  margin-bottom: 10px;
+  background: #fefefe;
+  border-radius: 4px;
+  -webkit-transition: all .5s cubic-bezier(.08,.81,.87,.71);
+  -moz-transition: all .5s cubic-bezier(.08,.81,.87,.71);
+  -ms-transition: all .5s cubic-bezier(.08,.81,.87,.71);
+  -o-transition: all .5s cubic-bezier(.08,.81,.87,.71);
+  transition: all .5s cubic-bezier(.08,.81,.87,.71);
+}
+
+#span1 {
+  transform-origin: 4px 0px;
+}
+
+#span3 {
+  transform-origin: bottom right;
+}
+
+#menuToggle input:checked ~ #span1 {
+  transform: rotate(45deg) translate(8px);
+}
+#menuToggle input:checked ~ #span2 {
+  transform: rotate(495deg) translate(4px);   
+}
+#menuToggle input:checked ~ #span3 {
+  transform: rotate(45deg);
+  opacity: 0;
 }
 
 a {
@@ -115,7 +182,7 @@ h1 {
   text-align: center;
   text-shadow: 0px 1px 2px rgba(1, 1, 1, 0.64);
   font-weight: 800;
-  padding: 140px 140px 38px 140px;
+  padding: 126px 140px 38px 140px;
 }
 
 h1:hover {
@@ -163,17 +230,20 @@ h2 {
 }
 
 .about {
-  background: url(img/bg-about.png) no-repeat;
-  background-size: cover;
-  padding: 0px 92px 0px 110px;
-  text-align: center;
-  width: 100%;
+  background: url(img/bg-about.png);
+background-size: cover;
+background-position: center center;
+background-attachment: fixed;
+text-align: center;
+
 }
 
 
 
 .about-wrapper {
   display: flex;
+  flex-flow: nowrap row;
+ 
 }
 
 .about-col {
@@ -191,6 +261,7 @@ animation-delay: 0;
 animation-play-state: running;
 animation-fill-mode: forwards;
 margin-top: 100px;
+
 }
 
 @keyframes plate-img {
@@ -207,21 +278,23 @@ margin-top: 100px;
 
 
 
-.ingredients {
-  background: url(img/bg-ingredients.png) no-repeat;
-  background-size: cover;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  margin-bottom: -10px;
-  max-width: 100%;
-  height: auto;
-  display: block;
+.ingredients  {
+  background: url(img/bg-ingredients.png);
+  background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+background-attachment: fixed;
+  
+  
 }
 
 .ingredients .container {
 display: flex;
-flex-direction: row;
-
+flex-flow: nowrap row;
+padding-top: 100px;
+  padding-bottom: 100px;
+  margin-bottom: -10px;
+ justify-content: space-between;
 }
 
 .ingredients p {
@@ -231,41 +304,39 @@ flex-direction: row;
   line-height: 1.5;
   text-align: center;
   align-content: space-between;
- 
+ margin-bottom: 53px;
 }
 
 .ingredients-wrapper {
   background-color: rgb(0, 0, 0);
   opacity: 0.671;
-  margin: 100px 40px 101px 0px;
+  margin: 100px 0px 101px 0px;
   padding: 50px 70px 72px 70px;
 position: relative;
 
 }
 
 .ingredient-image {
-
-  margin: 53px 0 0 0;
+  margin: 0 auto;
+ display:flex;
+ flex-direction: row;
+ justify-content: space-around;
 }
 
 .ingredient-image img {
-  margin-right: 29px;
-  
+  width: 20%;
+  height: auto;
+  max-height: 100%;
 }
 
-.video {
-  margin-top: 150px;
-  margin-right: 20px;
+
+
+.iframe-container {
+  margin-top:120px;
+  width: 100%;
+  margin-right: 10px;
 }
-.popup-text-ingredients {
- position: absolute;
-top:336px;
-display: none;
-margin-left:100px;
 
-
-
-}
 
 .title-food {
   color: rgb(204, 153, 0);
@@ -292,12 +363,12 @@ td {
 }
 
 .reviews {
-  background: url(img/reviews-bg.png) no-repeat;
-  padding: 100px 240px 100px 240px;
+  background: url(img/reviews-bg.png);
+  background-repeat: no-repeat;
   background-size: cover;
-  max-width: 100%;
-  height: auto;
-  display: block;
+  background-position: center center;
+  background-attachment: fixed;
+  padding: 100px 0px 100px 0px;
 }
 
 .reviews p {
@@ -325,13 +396,21 @@ padding-top:33px;
 }
 
 .reservations {
-  background: url(img/background-reservations.png) no-repeat;
+  background: url(img/background-reservations.png);
+  background-repeat: no-repeat;
   background-size: cover;
- max-width: 100%;
-display: flex;
-flex-direction: row;
-padding:110px 283px 103px 40px;
+  background-position: center center;
+  background-attachment: fixed;
+padding:110px 0px 103px 0px;
+
 }
+
+.reservations .container {
+ display: flex;
+flex-flow: row nowrap; 
+}
+
+
 .reservations h2 {
   padding-top: 20px;
 }
@@ -342,12 +421,14 @@ padding:110px 283px 103px 40px;
 
 .reservations-wrapper {
   display: flex;
-  flex-direction: row;
- 
+ flex-direction: row;
 }
+
+
 
 .reservations-wrapper h2 {
   padding-top:0;
+
 }
 
 .booking {
@@ -450,6 +531,8 @@ line-height: 1.2;
 .social {
   display: flex;
   margin: 45px 40px 35px 30px;
+  padding-right: 20px;
+
 }
 
 .social a {
@@ -467,13 +550,13 @@ line-height: 1.2;
 footer {
   background-color: #191919;
   color: #fefefe;
-padding:52px 110px 50px 40px;
+padding:52px 0px 50px 0px;
 
 }
 
 .footer-wrapper {
 display: flex;
-align-content: space-between;
+flex-flow: row nowrap; 
 width: 100%;
 }
 
@@ -533,3 +616,5 @@ margin-top: -100px;
 -webkit-background-clip: content-box;
 background-clip: content-box;
 }
+
+
