--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 html,
 body {
 font-size: 16px;
@@ -19,23 +21,82 @@ background-size: cover;
 background-position: center center;
 background-attachment: fixed;
 width: 100%;
+height: 100vh;
 }
 
 
-/* меню */
-.navbar {
-  overflow: hidden;
-  display: flex;
-  justify-content: space-between;
+/* мобильное меню */
+#main {
+padding: 20px;
+ position: fixed;
+ margin-top: 15px;
+ display: none;
+}
+
+#main a {
+  text-decoration: none;
+  padding: 20px;
+  font-size: 32px;
+  flex-wrap: bold;
+ 
+}
+.burger-menu ul {
+  margin: 0;
+  list-style: none;
+  display: none;
+  margin-top: 100px;
  
 }
 
 
+/* меню закрыто */
+.burger-menu ul { 
+  margin: 0;
+  list-style: none;
+  padding-right: 20px;
+  display: none;
+  
+}
+
+.burger-menu .title {
+  font-size: 25px;
+  cursor: pointer;
+  color:#fefefe;
+}
+
+.burger-menu .title::before {
+content:'☰';
+color: #fefefe;
+font-size: 50px;
+}
+
+/* меню раскрыто */
+.burger-menu.open .title::before {
+  content: '🞬';
+  color: #fefefe;
+
+
+}
+
+.burger-menu.open ul {
+  display: flex;
+  flex-direction: column;
 
 
 
-.sticky{
-position: fixed;
+}
+
+.burger-menu li {
+  background-color: orange;
+  padding: 10px;
+ border: #fefefe 1px solid;
+
+}
+/* меню */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
   top: 0;
   z-index: 1000;
  height: 100px;
@@ -45,7 +106,9 @@ background-size: cover;
 background-position: center center;
 background-attachment: fixed;
  width: 100vw;
-} 
+}
+
+
 
 
 .header-img {
@@ -71,6 +134,7 @@ background-attachment: fixed;
   background-attachment: fixed;
   padding: 100px 20px 100px 20px;
   width: 100%;
+  height: 100vh;
 }
 
 .menu-list {
@@ -112,61 +176,7 @@ justify-content: space-around;
 
 }
 
-/* меню бургер */
-#menuToggle {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  display: none;
-  
-}
 
-#menuToggle input {
-  display: flex;
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  cursor: pointer;
-  opacity: 0; /* hide input */
-  z-index: 1; /* top of the menu */
-}
-
-#menuToggle span{
-  width: 55px;
-  height: 8px;
-  margin-bottom: 10px;
-  background: #fefefe;
-  border-radius: 4px;
-  -webkit-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-  -moz-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-  -ms-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-  -o-transition: all .5s cubic-bezier(.08,.81,.87,.71);
-  transition: all .5s cubic-bezier(.08,.81,.87,.71);
-}
-
-#span1 {
-  transform-origin: 4px 0px;
-}
-
-#span3 {
-  transform-origin: bottom right;
-}
-
-#menuToggle input:checked ~ #span1 {
-  transform: rotate(45deg) translate(8px);
-}
-#menuToggle input:checked ~ #span2 {
-  transform: rotate(495deg) translate(4px);   
-}
-#menuToggle input:checked ~ #span3 {
-  transform: rotate(45deg);
-  opacity: 0;
-}
 
 a {
   text-decoration: none;
@@ -183,6 +193,7 @@ h1 {
   text-shadow: 0px 1px 2px rgba(1, 1, 1, 0.64);
   font-weight: 800;
   padding: 126px 140px 38px 140px;
+  margin-top: 100px;
 }
 
 h1:hover {
@@ -235,7 +246,7 @@ background-size: cover;
 background-position: center center;
 background-attachment: fixed;
 text-align: center;
-
+height: 100vh;
 }
 
 
@@ -284,7 +295,7 @@ margin-top: 100px;
 background-size: cover;
 background-position: center center;
 background-attachment: fixed;
-  
+  height: 100vh;
   
 }
 
@@ -369,6 +380,7 @@ td {
   background-position: center center;
   background-attachment: fixed;
   padding: 100px 0px 100px 0px;
+  height: 100vh;
 }
 
 .reviews p {
@@ -402,7 +414,7 @@ padding-top:33px;
   background-position: center center;
   background-attachment: fixed;
 padding:110px 0px 103px 0px;
-
+height: 100vh;
 }
 
 .reservations .container {
@@ -489,6 +501,7 @@ line-height: 1.2;
 .btn-header {
   text-align: center;
   padding-bottom:142px;
+  margin-top: 100px;
 }
 
 .btn-white {
@@ -618,3 +631,39 @@ background-clip: content-box;
 }
 
 
+/* Media */
+
+@media (max-width: 1045px) { 
+  .nav-bar {
+    display: none;
+  }
+
+  #main {
+     display: block;
+    }
+  h1 {
+    font-size: 70px;
+  }
+ }
+
+
+
+ // Малые девайсы («ландшафтные телефоны», >= 576px)
+ @media (max-width: 576px) { ... }
+ 
+ // Средние девайсы («таблетки», >= 768px)
+ @media (max-width: 768px) { 
+  h1 {
+    font-size: 30px;
+  }
+  }
+ 
+ // Большие девайсы (десктопы, >= 992px)
+ @media (max-width: 992px) { 
+  h1 {
+    font-size: 40px;
+  }
+  }
+ 
+ // Экстрабольшие девайсы (большие десктопы, >= 1200px)
+ @media (max-width: 1200px) { ... }
