--- a/style.css
+++ b/style.css
@@ -2,35 +2,38 @@
 
 html,
 body {
-font-size: 16px;
-scroll-behavior: smooth;
-width: 100%;
+  font-size: 16px;
+  scroll-behavior: smooth;
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .container {
-width: 1250px;
-margin: 0 auto;
-width: 78vw;
- 
+  width: 1250px;
+  margin: 0 auto;
+  width: 78vw;
+
 }
 
 header {
-background: url(img/bg-header.png);
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center center;
-background-attachment: fixed;
-width: 100%;
-height: 100vh;
+  background: url(img/bg-header.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 
 /* мобильное меню */
 #main {
-padding: 20px;
- position: fixed;
- margin-top: 15px;
- display: none;
+  padding: 20px;
+  position: fixed;
+  margin-top: 15px;
+  display: none;
 }
 
 #main a {
@@ -38,36 +41,37 @@ padding: 20px;
   padding: 20px;
   font-size: 32px;
   flex-wrap: bold;
- 
+
 }
+
 .burger-menu ul {
   margin: 0;
   list-style: none;
   display: none;
   margin-top: 100px;
- 
+
 }
 
 
 /* меню закрыто */
-.burger-menu ul { 
+.burger-menu ul {
   margin: 0;
   list-style: none;
   padding-right: 20px;
   display: none;
-  
+
 }
 
 .burger-menu .title {
   font-size: 25px;
   cursor: pointer;
-  color:#fefefe;
+  color: #fefefe;
 }
 
 .burger-menu .title::before {
-content:'☰';
-color: #fefefe;
-font-size: 50px;
+  content: '☰';
+  color: #fefefe;
+  font-size: 50px;
 }
 
 /* меню раскрыто */
@@ -89,9 +93,10 @@ font-size: 50px;
 .burger-menu li {
   background-color: orange;
   padding: 10px;
- border: #fefefe 1px solid;
+  border: #fefefe 1px solid;
 
 }
+
 /* меню */
 .navbar {
   display: flex;
@@ -99,13 +104,13 @@ font-size: 50px;
   position: fixed;
   top: 0;
   z-index: 1000;
- height: 100px;
- background: url(img/bg-header.png);
- background-repeat: no-repeat;
-background-size: cover;
-background-position: center center;
-background-attachment: fixed;
- width: 100vw;
+  height: 100px;
+  background: url(img/bg-header.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  width: 100%;
 }
 
 
@@ -121,7 +126,7 @@ background-attachment: fixed;
   transform: scale(0.8);
 }
 
-.nav-bar{
+.nav-bar {
   margin: 0 auto;
   padding-top: 50px;
 }
@@ -134,15 +139,15 @@ background-attachment: fixed;
   background-attachment: fixed;
   padding: 100px 20px 100px 20px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .menu-list {
   display: flex;
-justify-content: space-around;
+  justify-content: space-around;
   flex-wrap: wrap;
   margin: 0 auto;
- 
+
 
 }
 
@@ -165,7 +170,7 @@ justify-content: space-around;
   font-weight: 700px;
   font-size: 21px;
   margin-bottom: 10px;
- 
+
 }
 
 .nav-link:hover {
@@ -197,7 +202,7 @@ h1 {
 }
 
 h1:hover {
-  color:rgb(204, 153, 0); 
+  color: rgb(204, 153, 0);
 }
 
 
@@ -242,11 +247,12 @@ h2 {
 
 .about {
   background: url(img/bg-about.png);
-background-size: cover;
-background-position: center center;
-background-attachment: fixed;
-text-align: center;
-height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
 
@@ -254,58 +260,63 @@ height: 100vh;
 .about-wrapper {
   display: flex;
   flex-flow: nowrap row;
- 
+
 }
 
 .about-col {
   margin-top: 100px;
 }
 
-.plate-img {
-transform: rotate(360deg);
-animation-name: plate-img;
-animation-duration: 77s;
-animation-timing-function: linear;
-animation-iteration-count: infinite;
-animation-direction: normal;
-animation-delay: 0;
-animation-play-state: running;
-animation-fill-mode: forwards;
-margin-top: 100px;
+.cook-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
+.plate-img {
+  transform: rotate(360deg);
+  animation-name: plate-img;
+  animation-duration: 77s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-delay: 0;
+  animation-play-state: running;
+  animation-fill-mode: forwards;
+  margin-top: 40px;
 }
 
 @keyframes plate-img {
   0% {
-  transform: rotate(0deg);
-  transform: rotate(0deg);
+    transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 
   100% {
-  transform: rotate(360deg);
-  transform: rotate(360deg);
+    transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 
 
-.ingredients  {
+.ingredients {
   background: url(img/bg-ingredients.png);
   background-repeat: no-repeat;
-background-size: cover;
-background-position: center center;
-background-attachment: fixed;
-  height: 100vh;
-  
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+
+
 }
 
 .ingredients .container {
-display: flex;
-flex-flow: nowrap row;
-padding-top: 100px;
+  display: flex;
+  flex-flow: nowrap row;
+  padding-top: 100px;
   padding-bottom: 100px;
   margin-bottom: -10px;
- justify-content: space-between;
+  justify-content: space-between;
 }
 
 .ingredients p {
@@ -315,7 +326,7 @@ padding-top: 100px;
   line-height: 1.5;
   text-align: center;
   align-content: space-between;
- margin-bottom: 53px;
+  margin-bottom: 53px;
 }
 
 .ingredients-wrapper {
@@ -323,15 +334,15 @@ padding-top: 100px;
   opacity: 0.671;
   margin: 100px 0px 101px 0px;
   padding: 50px 70px 72px 70px;
-position: relative;
-
+  position: relative;
+  max-width: 50%;
 }
 
 .ingredient-image {
   margin: 0 auto;
- display:flex;
- flex-direction: row;
- justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .ingredient-image img {
@@ -343,9 +354,22 @@ position: relative;
 
 
 .iframe-container {
-  margin-top:120px;
-  width: 100%;
+  margin-top: 120px;
   margin-right: 10px;
+  width: 100%;
+  display: block;
+  height: 0;
+  position: relative;
+  padding-bottom: 25%;
+
+}
+
+.iframe-container iframe {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -380,7 +404,8 @@ td {
   background-position: center center;
   background-attachment: fixed;
   padding: 100px 0px 100px 0px;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 .reviews p {
@@ -391,8 +416,9 @@ td {
   line-height: 1.8;
   text-align: center;
 }
-.reviews p:last-child{
-padding-top:33px; 
+
+.reviews p:last-child {
+  padding-top: 33px;
 }
 
 .quote {
@@ -413,61 +439,71 @@ padding-top:33px;
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-padding:110px 0px 103px 0px;
-height: 100vh;
+  padding: 110px 30px 103px 30px;
+  height: 100%;
+
 }
 
 .reservations .container {
- display: flex;
-flex-flow: row nowrap; 
+  display: flex;
+  justify-content: space-between;
 }
 
 
 .reservations h2 {
   padding-top: 20px;
 }
+
+.reservations-images {
+  margin: 0 auto;
+}
+
 .booking {
   width: 430px;
-  
+
 }
 
 .reservations-wrapper {
   display: flex;
- flex-direction: row;
+  flex-direction: row;
+
 }
 
 
 
 .reservations-wrapper h2 {
-  padding-top:0;
+  padding-top: 0;
 
 }
 
 .booking {
-  margin-left: 70px;
   width: 430px;
+  padding-left: 50px;
+  margin: 0 auto 40px;
 
 }
+
 .wrapper-form {
-  margin-top: 34,49px;
+  margin-top: 34, 49px;
   padding-left: 0;
   width: 100%;
 
- 
+
 }
 
-.form-col  {
+.form-col {
   display: flex;
   flex-direction: row;
+
 }
 
 input {
   width: 200px;
   margin-right: 30px;
-  margin-left:0;
-  margin-top:9.5px;
- display: block;
- margin-bottom: 27px;
+  margin-left: 0;
+  margin-top: 9.5px;
+  display: block;
+  margin-bottom: 27px;
 }
 
 input::placeholder {
@@ -475,19 +511,20 @@ input::placeholder {
 
 }
 
-input::placeholder:hover{
+input::placeholder:hover {
   border-color: rgb(201, 161, 49);
 }
 
 label {
-padding-top: 3px;
-display: block;
-font-size: 14px;
-font-family: "OpenSans";
-color: rgb(201, 161, 49);
-font-weight: bold;
-line-height: 1.2;
+  padding-top: 3px;
+  display: block;
+  font-size: 14px;
+  font-family: "OpenSans";
+  color: rgb(201, 161, 49);
+  font-weight: bold;
+  line-height: 1.2;
 }
+
 .decoration {
   margin: 0 auto;
   margin-top: 30px;
@@ -500,7 +537,7 @@ line-height: 1.2;
 /* кнопки */
 .btn-header {
   text-align: center;
-  padding-bottom:142px;
+  padding-bottom: 142px;
   margin-top: 100px;
 }
 
@@ -534,12 +571,11 @@ line-height: 1.2;
   color: white;
   width: 198px;
   height: 34px;
-  margin-left:114.88px;
+  margin-left: 114.88px;
+
 }
-.reservations-images {
-  margin-left: 40px;
-  margin-right: 30px;
-}
+
+
 /* иконки */
 .social {
   display: flex;
@@ -563,14 +599,15 @@ line-height: 1.2;
 footer {
   background-color: #191919;
   color: #fefefe;
-padding:52px 0px 50px 0px;
-
+  padding: 52px 0px 50px 0px;
+  width: 100%;
+  height: 100%;
 }
 
 .footer-wrapper {
-display: flex;
-flex-flow: row nowrap; 
-width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 footer h3 {
@@ -585,10 +622,11 @@ footer h3 {
 
 
 .footer-social {
-margin-top:47.5px;
-display: flex;
-align-content:row;
-margin-left:76.44px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 43px;
+
 }
 
 footer p {
@@ -598,72 +636,169 @@ footer p {
   line-height: 1.5;
   text-align: center;
 }
+
 footer .icon-white-line {
- margin: 0 auto;
+  margin: 0 auto;
   margin-top: 16px;
-  margin-bottom:13.5px;
+  margin-bottom: 13.5px;
 }
-.footer-about-us {
-  width: 35,2%;
-  padding: 0px 30px 0px 40px;
-}
+
+
+
 footer span {
   font-weight: bold;
 }
-.time-work {
-  width: 29,6%;
-  padding: 0px 70px 0px 70px;
-  
-}
 
-.our-location {
-  width: 35,2%;
-  padding: 0px 110px 0px 100px;
-}
 
 
 
 .anchor {
-padding-top: 100px;
-margin-top: -100px;
--webkit-background-clip: content-box;
-background-clip: content-box;
+  padding-top: 100px;
+  margin-top: -100px;
+  -webkit-background-clip: content-box;
+  background-clip: content-box;
 }
 
 
 /* Media */
 
-@media (max-width: 1045px) { 
+
+
+
+/* 
+ Малые девайсы («ландшафтные телефоны», >= 576px) */
+
+@media (max-width: 576px) {}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 25px;
+  }
+
+  header .decoration {
+    display: none;
+  }
+
+  .btn-header {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+}
+
+
+/*  Средние девайсы («таблетки», >= 768px) */
+@media (max-width: 768px) {
+
+  h1 {
+    font-size: 40px;
+    margin-top: 50px;
+  }
+
+  .btn-header {
+    margin-top: 50px;
+    margin-bottom: 10px;
+  }
+
+  .about .cook-img img {
+    height: 150px;
+  }
+
+  .plate-img {
+    display: none;
+  }
+
+  .reservations-images {
+    display: none;
+  }
+
+}
+
+@media (max-width: 826px) {
+  .footer-wrapper {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .time-work {
+    margin-top: 20px;
+
+  }
+
+  .our-location {
+    margin-top: 20px;
+  }
+
+}
+
+/*  Большие девайсы (десктопы, >= 992px) */
+@media (max-width: 992px) {
+  h1 {
+    font-size: 60px;
+  }
+
+  .ingredients .container {
+    display: flex;
+    flex-direction: column-reverse;
+
+  }
+
+  .iframe-container {
+    padding-bottom: 50%;
+
+  }
+
+  .ingredients-wrapper {
+    margin: 0 auto;
+  }
+
+}
+
+@media (max-width: 1065px) {
   .nav-bar {
     display: none;
   }
 
   #main {
-     display: block;
-    }
+    display: block;
+    margin-left: 15px;
+    margin-right: 10px;
+  }
+
   h1 {
     font-size: 70px;
   }
- }
+
+}
+
+/* Экстрабольшие девайсы (большие десктопы, >= 1200px) */
+@media (max-width: 1194px) {
+  .about-col {
+    position: relative;
+    z-index: 2;
+  }
+
+  .plate-img {
+    position: absolute;
+    z-index: 1;
+    margin-top: 150px;
+
+  }
+
+  .plate-img img {
+    height: 400px;
+  }
+
+  .cook-img {
+    text-align: end;
+  }
+
+}
+
+@media (max-width: 1300px) {
+  .reservations .container {
+    flex-wrap: wrap-reverse;
+  }
 
 
-
- // Малые девайсы («ландшафтные телефоны», >= 576px)
- @media (max-width: 576px) { ... }
- 
- // Средние девайсы («таблетки», >= 768px)
- @media (max-width: 768px) { 
-  h1 {
-    font-size: 30px;
-  }
-  }
- 
- // Большие девайсы (десктопы, >= 992px)
- @media (max-width: 992px) { 
-  h1 {
-    font-size: 40px;
-  }
-  }
- 
- // Экстрабольшие девайсы (большие десктопы, >= 1200px)
- @media (max-width: 1200px) { ... }
+}
