--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 html,
 body {
   font-size: 16px;
@@ -6,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+ 
 }
 
 .container {
@@ -20,9 +23,8 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  background-attachment: fixed;
-  width: 100%;
-  height: 100%;
+  background-attachment: fixed
+  
 }
 
 
@@ -370,7 +372,7 @@ h2 {
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-
+  
 
 }
 
@@ -482,8 +484,7 @@ td {
   background-position: center center;
   background-attachment: fixed;
   padding: 100px 0px 100px 0px;
-  height: 100%;
-  width: 100%;
+  
 }
 
 .reviews p {
@@ -897,7 +898,10 @@ footer span {
   }
 
   .form-col {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 
   }
 
